--- a/docs/api/migration-guides/local-simulators.mdx
+++ b/docs/api/migration-guides/local-simulators.mdx
@@ -3,7 +3,7 @@ title: Migrate to local simulators
 description: Migrate from using the IBM Quantum cloud simulators to using Qiskit Runtime local testing mode.
 ---
 
-# Migrate from cloud simulators to Qiskit Runtime local testing mode
+# Migrate from cloud simulators to local simulators
 
 In quantum computing, the choice between using simulators and quantum hardware is crucial for making progress in the field. While simulators are useful for testing and debugging, in this era of quantum utility, quantum development and industry advancement requires actual hardware. As part of the move to quantum utility, IBM Quantum&trade; will retire its cloud simulators on 15 May 2024. This guide explains in more detail why this is happening, and how to migrate from [cloud based simulators](/verify/cloud-based-simulators), such as `ibmq_qasm_simulator`, to local simulators. 
 
@@ -48,7 +48,7 @@ Successful quantum algorithms must be adapted to exploit the capabilities of qua
 
 ## When should simulators be used?
 
-Quantum simulators should be used to help develop and test programs before fine-tuning them and sending them to quantum hardware. Local simulators can do this with good performance and efficiency.  Clifford circuits can be simulated very efficiently, and results can be verified. This is useful to give confidence in an experiment.
+Quantum simulators should be used to help develop and test programs before fine-tuning them and sending them to quantum hardware. Local simulators can do this with good performance and efficiency.  Clifford circuits can be simulated very efficiently, and results can be verified, which is a useful way to gain confidence in an experiment. 
 
 ## Migrate to local simulators
 
