--- a/docs/verify/local-testing-mode.mdx
+++ b/docs/verify/local-testing-mode.mdx
@@ -15,7 +15,7 @@ To use local testing mode, specify one of the fake backends from ``qiskit_ibm_ru
 
 
 
-{/* If you currently use Qiskit (and not Qiskit Runtime), you can use the existing Qiskit Aer primitives for local testing.  See [exact and noisy simulation with Qiskit Aer primitives](../verify/simulate-with-qiskit-aer) for details. */}
+{/* If you currently use the Qiskit SDK, you can use the existing Qiskit Aer primitives for local testing.  See [exact and noisy simulation with Qiskit Aer primitives](../verify/simulate-with-qiskit-aer) for details. */}
 
 ## Fake backends example
  
