--- a/docs/analyze/visualize-results.ipynb
+++ b/docs/analyze/visualize-results.ipynb
@@ -5,7 +5,7 @@
    "id": "2d16e04d-7dee-4e47-b009-bbd50c247fdf",
    "metadata": {},
    "source": [
-    "# Visualize Results"
+    "# Visualize results"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "source": [
     "### Use the output from plot_histogram()\n",
     "\n",
-    "The `plot_histogram()` function returns a `matplotlib.Figure` which Jupyter notebooks understand and display below the cell. When running outside of Jupyter, use `matplotlib.Figure` methods to display and save the visualization. Calling `.show()` on the returned object from `plot_histogram()` opens the image in a new window (assuming your configured matplotlib backend is interactive). Alternatively, calling `.savefig('out.png')` saves the figure to `out.png`. The `savefig()` method takes a path so you can adjust the location and filename where you're saving the output."
+    "The `plot_histogram()` function returns a `matplotlib.Figure` which Jupyter notebooks understand and display after the cell. When running outside of Jupyter, use `matplotlib.Figure` methods to display and save the visualization. Calling `.show()` on the returned object from `plot_histogram()` opens the image in a new window (assuming your configured Matplotlib backend is interactive). Alternatively, calling `.savefig('out.png')` saves the figure to `out.png`. The `savefig()` method takes a path so you can adjust the location and filename where you're saving the output."
    ]
   }
  ],
