--- a/docs/build-new/circuit-visualization.ipynb
+++ b/docs/build-new/circuit-visualization.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "### Alternative renderers\n",
     "\n",
-    "A text output is useful for quickly seeing the output while developing a circuit, but it doesn't provide the most flexibility. There are two alternative output renderers for the quantum circuit. One uses [matplotlib](https://matplotlib.org/) and the other uses [LaTeX](https://www.latex-project.org/). The LaTeX renderer requires the [qcircuit package](https://github.com/CQuIC/qcircuit). Select these renderers by setting the \"output\" argument to the strings `mpl` and `latex`.\n",
+    "A text output is useful for quickly seeing the output while developing a circuit, but it doesn't provide the most flexibility. There are two alternative output renderers for the quantum circuit. One uses [Matplotlib](https://matplotlib.org/) and the other uses [LaTeX](https://www.latex-project.org/). The LaTeX renderer requires the [qcircuit package](https://github.com/CQuIC/qcircuit). Select these renderers by setting the \"output\" argument to the strings `mpl` and `latex`.\n",
     "\n",
     "<Admonition type=\"tip\">\n",
     "  OSX users can get the required LaTeX packages through the [mactex package](https://www.tug.org/mactex/)\n",
@@ -204,7 +204,7 @@
     "Depending on the output, there are also options to customize the circuit diagram.\n",
     "\n",
     "#### Disable plot barriers and reverse bit order\n",
-    "The first two options are shared among all three backends. They allow you to configure both the bit orders and whether or not you draw barriers. These can be set by the `reverse_bits` kwarg and `plot_barriers` kwarg, respectively. The examples below will work with any output renderer; `mpl` is used here for brevity."
+    "The first two options are shared among all three backends. They allow you to configure both the bit orders and whether or not you draw barriers. These can be set by the `reverse_bits` kwarg and `plot_barriers` kwarg, respectively. The following examples will work with any output renderer; `mpl` is used here for brevity."
    ]
   },
   {
@@ -415,7 +415,7 @@
    "id": "495b560a-d835-448b-aa01-5025a7a0689e",
    "metadata": {},
    "source": [
-    "### circuit_drawer() as function\n",
+    "### Standalone circuit-drawing function\n",
     "\n",
     "If you have an application where you prefer to draw a circuit with a self-contained function instead of as a method of a circuit object, you can directly use the `circuit_drawer()` function, which is part of the public stable interface from `qiskit.visualization`. The function behaves identically to the `circuit.draw()` method, except that it takes in a circuit object as required argument."
    ]
