--- a/docs/start/install.mdx
+++ b/docs/start/install.mdx
@@ -112,7 +112,7 @@ Whether you will work locally or in a cloud environment, the first step for all 
       ```shell
       pip install jupyter
       ```
-    Open your notebook as follows:
+    Then open your notebook as follows:
 
       ```shell
       jupyter notebook path/to/notebook.ipynb
