--- a/docs/verify/local-testing-mode.mdx
+++ b/docs/verify/local-testing-mode.mdx
@@ -42,7 +42,7 @@ isa_qc = pm.run(qc)
 options = {"simulator": {"seed_simulator": 42}}
 sampler = Sampler(backend=fake_manila, options=options)
 
-result = sampler.run([(isa_qc)]).result()
+result = sampler.run([isa_qc]).result()
 ```        
 
 ## AerSimulator examples
@@ -70,7 +70,7 @@ pm = generate_preset_pass_manager(backend=aer_sim, optimization_level=1)
 isa_qc = pm.run(qc)
 with Session(backend=aer_sim) as session:
     sampler = Sampler(session=session)
-    result = sampler.run([(isa_qc)]).result()
+    result = sampler.run([isa_qc]).result()
 ```
 
 To simulate with noise, specify a system (quantum hardware) and submit it to Aer.  Aer builds a noise model based on the calibration data from that system, and instantiates an Aer backend with that model.  If you prefer, you can [build a noise model](/verify/building_noise_models).
