--- a/docs/start/setup-channel.mdx
+++ b/docs/start/setup-channel.mdx
@@ -15,7 +15,7 @@ You have the option to access IBM Quantum hardware through either [IBM Quantum P
 
 IBM Quantum Platform has Open (free access) and Premium (enterprise subscription) plans. See [IBM Quantum access plans](https://www.ibm.com/quantum/access-plans) for details.
 
-Before setting up with IBM Quantum Platform, make sure you have the Qiskit SDK and Qiskit Runtime installed (LINK). 
+Before setting up with IBM Quantum Platform, make sure you have the [Qiskit SDK and Qiskit Runtime installed](install#local). 
 
 Available plans: 
 
