--- a/docs/verify/local-testing-mode.ipynb
+++ b/docs/verify/local-testing-mode.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "description": "Use local testing mode to simulate quantum hardware in Qiskit Runtime",
-    "title": "Qiskit Runtime local testing mode"
-   },
+   "metadata": {},
    "source": [
     "<span id=\"test-locally\"></span>\n",
     "# Qiskit Runtime local testing mode"
@@ -202,9 +199,25 @@
   }
  ],
  "metadata": {
+  "description": "Use local testing mode to simulate quantum hardware in Qiskit Runtime",
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
-  }
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3"
+  },
+  "title": "Qiskit Runtime local testing mode"
  },
  "nbformat": 4,
  "nbformat_minor": 2
