--- a/docs/api/migration-guides/local-simulators.mdx
+++ b/docs/api/migration-guides/local-simulators.mdx
@@ -51,7 +51,7 @@ Successful quantum algorithms must be adapted to exploit the capabilities of qua
 Quantum simulators should be used to help develop and test programs before fine-tuning them and sending them to quantum hardware. Local simulators can do this with good performance and efficiency.  Clifford circuits can be simulated very efficiently, and results can be verified, which is a useful way to gain confidence in an experiment. 
 
 <Admonition type="note">
-Local testing mode does not have built-in error suppression or mitigation.  Instead, you must specify those options explictly. See [Configure error mitigation for Qiskit Runtime](/run/configure-error-mitigation) for details. 
+Local testing mode does not have built-in error suppression or mitigation.  Instead, you must specify those options explicitly. See [Configure error mitigation for Qiskit Runtime](/run/configure-error-mitigation) for details. 
 </Admonition>
 
 ## Migrate to local simulators
