Simulator migration guide (#1023)
closes #919

DO NOT MERGE until we know the official announce date.

Preview the migration guide here:
https://qiskit-docs-preview-pr-1023.1799mxdls7qz.us-south.codeengine.appdomain.cloud/api/migration-guides/local-simulators

- [x] when known, add required version number

---------

Co-authored-by: abbycross <across@us.ibm.com>
Co-authored-by: Jessie Yu <jessieyu@us.ibm.com>
Co-authored-by: Abby Mitchell <23662430+javabster@users.noreply.github.com>

--- a/docs/run/primitives-get-started.mdx
+++ b/docs/run/primitives-get-started.mdx
@@ -233,9 +233,11 @@ print(f"  > Metadata: {result.metadata[0]}")
 ```
   </TabItem>
 </Tabs>
+
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
+    - Learn how to [test locally](../verify/local-testing-mode) before running on quantum computers.
     - Review detailed [primitives examples.](primitives-examples)
     - Read [Migrate to V2 primitives](/api/migration-guides/v2-primitives).
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
