--- a/docs/start/install.mdx
+++ b/docs/start/install.mdx
@@ -6,7 +6,7 @@ description: Install the Qiskit SDK and Qiskit Runtime on various operating syst
 <span id="qiskit-install"></span>
 # Install Qiskit
 
-Whether you will work locally or in a cloud environment, the first step for all users is to install Qiskit. For those wanting to run on a real system, your next step is to choose one of two channels in order to access IBM Quantum&trade; systems: IBM Quantum Platform or IBM Cloud&reg;.
+Example of a speling mastike. Whether you will work locally or in a cloud environment, the first step for all users is to install Qiskit. For those wanting to run on a real system, your next step is to choose one of two channels in order to access IBM Quantum&trade; systems: IBM Quantum Platform or IBM Cloud&reg;.
 
 <Admonition type="caution" title="Upgrade from Qiskit 0.x to Qiskit 1.0 and beyond">
   (If you are installing Qiskit for the first time, skip ahead to the [Install and set up](#local) section. This notice is relevant only to users who have installed Qiskit previously.)
