--- a/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.options.PecOptions.mdx
+++ b/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.options.PecOptions.mdx
@@ -16,7 +16,7 @@ Probabalistic error cancellation mitigation options.
 
 **Parameters**
 
-*   **max\_overhead** – The maximum circuit sampling overhead allowed, or `None` for no maximum.
+*   **max\_overhead** – The maximum circuit sampling overhead allowed, or `None` for no maximum. Default: 100.
 
 *   **noise\_gain** –
 
